<resources>
    <string name="app_name">HDesign</string>
    <string name="facebook_app_id" translatable="false">3369984609932290</string>
    <string name="default_notification_channel_id" translatable="false">@string/app_name</string>
    <string name="search">Search</string>
    <string name="title_splash_01">Human Design</string>
    <string name="next">Next</string>
    <string name="desc_splash_01">
        <![CDATA[
Human Design is the newest system for self-discovery.
<br><br>
This is a tool that brings together principles of the Chinese I Ching, the Hindu chakra system, Kaballah, astrology, quantum physics and genetics.
<br><br>
Human Design helps living in sync with your true nature. It guides you in building harmonious relationships with yourself and the world around you. ]]></string>
    <string name="desc_splash_02">
    <![CDATA[
Human Design offers a personality analysis based on the bodygraph, the so-called Rave Card.
<br><br>
The individual Rave Card contains a schematic image of energy centers, channels and gates that reflect the energy flow of each person.
<br><br>
 To calculate your personal Rave Card, you only need to fill in the data and answer a few questions.]]></string>
    <string name="title_splash_03"><![CDATA[Did you know<br>something about<br>Human Design?]]></string>
    <string name="title_splash_04"><![CDATA[What would you like<br>to get using<br>Human Design?]]></string>
    <string name="desc_splash_03"><![CDATA[Your answers will help us find<br>a more personalized approach for you.]]></string>
    <string name="desc_splash_04"><![CDATA[Your answers will help us choose<br>a personal approach.]]></string>
    <string name="variant_1_splash_03"><![CDATA[I didn\'t know anything<br>about Human Design]]></string>
    <string name="variant_2_splash_03"><![CDATA[I knew something, but<br>superficially]]></string>
    <string name="variant_3_splash_03"><![CDATA[I understand a little about<br>this system]]></string>
    <string name="variant_4_splash_03"><![CDATA[I study Human Design<br>professionally]]></string>
    <string name="variant_1_splash_04"><![CDATA[Know yourself better]]></string>
    <string name="variant_2_splash_04"><![CDATA[Improve the quality of life]]></string>
    <string name="variant_3_splash_04"><![CDATA[Find your destination]]></string>
    <string name="variant_4_splash_04"><![CDATA[Build relationships<br>with loved ones]]></string>
    <string name="variant_5_splash_04"><![CDATA[For general development]]></string>
    <string name="splash_05_title">Please allow us to track application usage</string>
    <string name="splash_05_desc">It is important for us, so that we can:</string>
    <string name="splash_05_text_1">Personalize your experience of using the App</string>
    <string name="splash_05_text_2">Send individual offers especially for you</string>
    <string name="splash_05_text_3">Invite users similar to you to the App</string>
    <string name="text_1_splash_05"><![CDATA[Please allow us to track application usage. It is<br>important for us, so that we can:]]></string>
    <string name="text_2_splash_05"><![CDATA[- Personalize your experience of using the App<br>- Invite users similar to you to the App<br>- Send individual offers especially for you]]></string>
    <string name="text_3_splash_05"><![CDATA[These parameters can always be changed in the<br>"settings" of your device.]]></string>
    <string name="rave_title">Rave Card</string>
    <string name="rave_desc"><![CDATA[
    In Human Design, personality analysis is<br>carried out on the basis of a bodygraph,<br>the so-called Rave Card.
<br><br>
An individual Rave Card (bodygraph)<br>contains a schematic image of energy<br>centers, channels and gates that reflect<br>the personal energy mechanics of each<br>person, as well as the algorithm of its<br>work.
<br><br>
To calculate a personal Rave Card<br>(bodygraph), you need to fill in the data<br>and answer a few questions.
]]></string>
    <string name="understand">Continue</string>
    <string name="continue_btn">Continue</string>
    <string name="continue_btn_start">Continue</string>
    <string name="start_rave_btn_text">Create</string>
    <string name="start_name_title"><![CDATA[What is<br>your name?]]></string>
    <string name="start_name_desc"><![CDATA[We’ll enjoy getting to know your better.]]></string>
    <string name="start_name_hint">Name</string>
    <string name="start_date_title">Date of birth</string>
    <string name="start_date_desc"><![CDATA[You date of birth is essential for identifying the exact position of the planets at the moment you were born.]]></string>
    <string name="start_time_title">Time of birth</string>
    <string name="start_time_desc"><![CDATA[We are almost done!<br>name, please enter your time of birth.]]></string>
    <string name="start_time_skip">I DON\'T KNOW FOR SURE</string>
    <string name="start_place_title">Place of birth</string>
    <string name="start_place_desc"><![CDATA[Your place of birth will give a clearer image of how stars affect you.]]></string>
    <string name="start_place_hint">City, Country</string>
    <string name="settings_title">Settings</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_dark_theme_title">Night</string>
    <string name="settings_light_theme_title">Day</string>
    <string name="settings_personal_info_title">Personal info</string>
    <string name="settings_faq_title">FAQ</string>
    <string name="settings_privace_policy_title">Privacy Policy</string>
    <string name="settings_terms_conditions_title">Terms &amp; Conditions</string>
    <string name="settings_manage_sub_title">Manage Subscriptions</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_write_us_title">Write to us</string>
    <string name="faq_title">FAQ</string>
    <string name="affirmations_title">Affirmations</string>
    <string name="forecasts_title">Forecasts</string>
    <string name="next_affirmation_text">The next affirmation will be tomorrow</string>
    <string name="next_forecast_text">Your individual weekly forecast</string>
    <string name="affirmation_share">Share</string>
    <string name="daily_transits_title">Planet transits</string>
    <string name="gates_title">Gates</string>
    <string name="channels_title">Channels</string>
    <string name="next_transit_text">The next transit will be tomorrow</string>
    <string name="design_title">Design</string>
    <string name="transit_title">Transit</string>
    <string name="personality_title">Personality</string>
    <string name="to_decryption_text">to decryption</string>
    <string name="about_title">About</string>
    <string name="centers_title">Centers</string>
    <string name="places_empty_text">No results</string>
    <string name="active_channels_title">Active Channels</string>
    <string name="active_channels_text">Channels are bridges that connect all the active centers within your design. Here you will find the descriptions of the most important aspects of your life.</string>
    <string name="active_gates_title">Active Gates</string>
    <string name="active_gates_text">The gates are a personal feature of your character, showing the potential that you can discover in yourself, making certain decisions every day.</string>
    <string name="active_centers_title">Defined Centers</string>
    <string name="active_centers_text">Defined centers perform the functions assigned to them. This is what is determined in you from the birth, this is consistent energy by which you are recognized. From here you are broadcasting your energy out into the world, influencing and inspiring others. It is what is fixed and reliable within you.</string>
    <string name="inactive_centers_title">Undefined Centers</string>
    <string name="menu_first_title">Bodygraph</string>
    <string name="menu_second_title">Description</string>
    <string name="menu_third_title">Transits</string>
    <string name="menu_forth_title">Compatibility</string>
    <string name="menu_fifth_title">Insights</string>
    <string name="promocode_ok">OK</string>
    <string name="special_offer">Special Offer</string>
    <string name="it_s_a_lucky_day_for_manifestor">It’s a lucky day for </string>
    <string name="_12_month_plan">12-Month Plan</string>
    <string name="_35_off">35% OFF</string>
    <string name="ending_special_pw">After the 3 days free trial this subscription automatically renews for 29.99 $/year unless it is canceled at least 24 hours before the end of the trial period. Subscriptions automatically renew unless auto-renew is turned off at least 24-hours before the end of the current period. You can cancel or change your membership at any time in Subscription on Google play.</string>
    <string name="_3_days_free_trial_pw4">3 Days free trial</string>
    <string name="one_time_deal">one-time deal</string>
    <string name="then_29_99_year">then $29.99/year</string>
    <string name="_45_99">$45.99</string>
    <string name="pw_4_autorenewable">auto-renewable</string>
    <string name="compatibility_child_empty_title">Improve your relationship</string>
    <string name="compatibility_child_empty_text">Discover how to guide your child to their\ninnate nature.\n\nFind out harmonious ways of interaction to\nallow your child\'s potential to grow freely.</string>
    <string name="compatibility_child_empty_add_btn">add child</string>
    <string name="next_year_activation_date_title">Activation Date</string>
    <string name="next_year_activation_date">January 22, 2024 at </string>
    <string name="next_year_main_text">The departing year has been anything but tranquil. It has presented numerous serious challenges, often rooted in the dichotomy of \"us versus them.\" The world continued its journey through a civilizational crisis, moving towards the transition to 2027, heralding a profound planetary shift into a new cycle.\n\nEverything signals an imminent restructuring of humanity. Such transformations seldom occur without turbulence and shock, and there are ample reasons to believe that more lies ahead.\nUnderstanding these shifts is crucial. It grants you the opportunity not to become a victim of collective opinion but to rely on yourself with a complete awareness of the unfolding processes</string>
    <string name="next_year_general_overview_title">General Overview</string>
    <string name="next_year_general_overview_text">Concern about the future that can be resolved by reevaluating our actions and behavior. Both the global and individual security systems require changes. Modesty will help us not to rush, not to act recklessly, but to assess the situation, observe, and understand how to behave to successfully navigate through all challenges. All of humanity will be in a state of seeking the right behavior on the fly to quickly respond to a changing environment.\n\nAlmost everyone will encounter different levels of shocking events and states, and it is important to know that, relying on your Design, you will not only be able to overcome challenges but also find optimal solutions for personal growth. This is a year of crises, individualism, and readiness for struggle. However, even such a characterization carries many opportunities for those who do not get confused and do not succumb to mass hysteria. This year, all of us need to pay attention to ourselves and our survival strategies, and it is Human Design that can help you become aware of your true self, learn to recognize reactions in the body, and make appropriate decisions for yourself.</string>
    <string name="allow_push_title">🔔 We’ll Notify You</string>
    <string name="allow_push_text">Allow push notifications for instant updates on your Bodygraph and weekly personal forecasts.</string>
</resources>