<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_bodygraph"
        android:icon="@drawable/item_menu_first_light"
        android:title="@string/menu_first_title" />

    <item
        android:id="@+id/navigation_description"
        android:icon="@drawable/item_menu_description_light"
        android:title="@string/menu_second_title"
        />

    <item
        android:id="@+id/navigation_transit"
        android:icon="@drawable/item_menu_second_light"
        android:title="@string/menu_third_title"/>

    <item
        android:id="@+id/navigation_compatibility"
        android:icon="@drawable/item_menu_third_light"
        android:title="@string/menu_forth_title"/>

    <item
        android:id="@+id/navigation_affirmation"
        android:icon="@drawable/item_menu_forth_light"
        android:title="@string/menu_fifth_title"/>

</menu>
