<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/bottomGradientPw4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:alpha="1"
        android:src="@drawable/ic_btn_bottom_gradient"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/bigCirclePw4"
        android:layout_width="977dp"
        android:layout_height="977dp"
        android:layout_marginTop="-80dp"
        android:adjustViewBounds="true"
        android:alpha="0.2"
        android:rotation="90"
        android:src="@drawable/ic_circle_big_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/startBtnPw4" />

    <ImageView
        android:id="@+id/midCirclePw4"
        android:layout_width="977dp"
        android:layout_height="977dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:alpha="0.2"
        android:src="@drawable/ic_circle_mid_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/startBtnPw4" />

    <ImageView
        android:id="@+id/closePw4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.5"
        android:src="@drawable/ic_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/closePw4"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/icPw4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_pw_special_dark"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/closePw4"
        android:layout_width="97dp"
        android:layout_height="97dp"/>

    <TextView
        android:id="@+id/titlePw4"
        android:gravity="center"
        android:text="@string/special_offer"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/icPw4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/subtitlePw4"
        android:alpha="0.7"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlePw4"
        android:textSize="14sp"
        android:text="@string/it_s_a_lucky_day_for_manifestor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/planTitlePw4"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/subtitlePw4"
        android:text="@string/_12_month_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/planSubtitlePw4"
        android:text="@string/_35_off"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/planTitlePw4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/offerBlockPw4"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/planSubtitlePw4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/offerPw4"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/offerTitlePw4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_days_free_trial_pw4"
                    android:textSize="20sp"
                    android:letterSpacing="0.04"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/offerThenPw4"
                        android:textSize="18sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/then_29_99_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/offerPrevPricePw4"
                        android:alpha="0.5"
                        android:textSize="18sp"
                        android:layout_marginStart="4dp"
                        android:text="@string/_45_99"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/offerThenPw4"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <View
                        android:id="@+id/linePw4"
                        android:background="@drawable/bg_line_dark"
                        app:layout_constraintStart_toStartOf="@id/offerPrevPricePw4"
                        app:layout_constraintEnd_toEndOf="@id/offerPrevPricePw4"
                        app:layout_constraintTop_toTopOf="@id/offerPrevPricePw4"
                        app:layout_constraintBottom_toBottomOf="@id/offerPrevPricePw4"
                        android:layout_width="0dp"
                        android:layout_height="2dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/renewablePw4"
                    android:alpha="0.5"
                    android:textSize="12sp"
                    android:text="@string/pw_4_autorenewable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/offerUptitlePw4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingVertical="1dp"
            android:text="@string/one_time_deal"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/offerPw4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/offerPw4" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/startBtnPw4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="2dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="20dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@id/endingPw4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_btn" />
        <TextView
            android:id="@+id/startBtnText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:letterSpacing="0.12"
            android:text="@string/continue_btn"
            android:textAllCaps="true"
            android:textColor="@color/lightColor"
            android:textSize="14sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/endingPw4"
        android:layout_marginBottom="10dp"
        android:textSize="10sp"
        android:alpha="0.5"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/ending_special_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>