<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <View
        android:id="@+id/allowPushBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/darkColor" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/allowPushCard"
        android:alpha="0"
        android:scaleX="0"
        android:scaleY="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:background="@color/lightCardColor"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/allowPushTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allow_push_title"
                android:textAlignment="center"
                android:textColor="@color/darkColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/allowPushText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:alpha="0.7"
                android:text="@string/allow_push_text"
                android:textAlignment="center"
                android:textColor="@color/darkColor"
                android:textSize="14sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/allowPushBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{handler::onBtnClicked}"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toTopOf="@id/indicatorsContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <!--android:foreground="?attr/selectableItemBackground"-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_btn" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:letterSpacing="0.12"
                    android:text="@string/promocode_ok"
                    android:textAllCaps="true"
                    android:textColor="@color/lightColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>